kserve-huggingfaceserver/huggingface-backend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: flan-t5-small-kservehuggingfaceserver
  labels:
    serving.kserve.io/inferenceservice: flan-t5-small-kservehuggingfaceserver
spec:
  to:
    kind: Service
    name: flan-t5-small-kservehuggingfaceserver-http
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
